--- a/adm/css/admin.css
+++ b/adm/css/admin.css
@@ -6,7 +6,6 @@
     font-weight: 400;
     font-style: normal;
 }
-
 /* 초기화 */
 html {overflow-y:scroll}
 body {margin:0;padding:0;font-size:0.75em;font-family:'Pretendard-Regular',"맑은 고딕",AppleGothic,Dotum,"돋움", sans-serif;background:#f3f3f3;height:100%;}
@@ -88,7 +87,7 @@ h2{font-size: 14px;font-weight: bold;margin:10px 2px 15px;}
     -moz-box-shadow: 2px 0 2px rgba(150,150,150,0.1);
     box-shadow: 2px 0 2px rgba(150,150,150,0.1);}
 #gnb .on .gnb_oparea{display:block}
-#gnb .gnb_oparea h3{margin-top:10px;line-height:18px;font-size:1.17em; color: #fff; background: #16354D; padding: 10px 15px; border-radius: 8px 8px 0 0;box-shadow: 0px -1px 8px rgba(150,150,150,0.2);}
+#gnb .gnb_oparea h3{margin-top:10px;line-height:18px;font-size:1.17em; color: #fff; background: #272e3d; padding: 10px 15px; border-radius: 8px 8px 0 0;box-shadow: 0px -1px 8px rgba(150,150,150,0.2);}
 #gnb .gnb_oparea ul{
     padding: 10px 15px;
     background: #fff;
@@ -176,7 +175,7 @@ a.btn_submit{background:#ff4081;color:#fff}
 .btn_win02 a:focus, .btn_win02 a:hover {text-decoration:none}
 .btn_win02 button.btn_submit {background:#ff3061;color:#fff}
 
-.btn_list {margin:15px 0 10px;} /* 목록용 */
+.btn_list {margin:15px 0 10px;}  /* 목록용 */
 .btn_list .btn_02{height:28px;padding:0 5px;border:0;}
 
 .btn_list01 {}
@@ -199,7 +198,7 @@ a.btn_submit{background:#ff4081;color:#fff}
 
 
 .td_mng a.btn,.td_mng a{display:inline-block;height:26px;line-height:26px;border:0;border-radius:3px;padding:0 8px;margin:1px;font-weight:normal; color: #fff;}
-.td_mng button,.td_mng button.btn{height:26px;border:0;border-radius:3px;padding:0 8px;margin:1px;font-weight:normal;}
+.td_mng button,.td_mng button.btn{height:26px;border:0;border-radius:3px;padding:0 8px;margin:1px;font-weight:normal}
 
 .btn{height:30px;border:0;border-radius:5px;padding:0 10px;font-weight:bold;font-size:1.09em;vertical-align:middle}
 a.btn{display:inline-block;height:30px;line-height:30px;border:0;border-radius:5px;padding:0 10px;font-weight:bold;font-size:1.09em;vertical-align:middle}
@@ -223,7 +222,7 @@ a.btn_ov02:hover,a.ov_listall:hover{background:#3f51b5}
 
 /*form*/
 .sound_only {display:inline-block !important;position:absolute;top:0;left:0;margin:0 !important;padding:0 !important;width:1px !important;height:1px !important;font-size:0;line-height:0;border:0 !important;overflow:hidden !important}
-.frm_input{padding:0 5px;height:35px;line-height:32px;border:1px solid #d5d5d5;}
+.frm_input{padding:0 5px;height:45px;line-height:50px; border: none; border-bottom:1px solid #acacac; width: 150px;}
 .frm_input_full{width:100%}
 .required{background:url('../img/wrest.gif') top right no-repeat #fff !important}
 select{height:35px;line-height:32px;border:1px solid #d5d5d5;}
@@ -231,6 +230,11 @@ textarea{width:100%;border:1px solid #d5d5d5;min-height:80px}
 legend {position:absolute;width:0;height:0;font-size:0;line-height:0;text-indent:-9999em;border:0;overflow:hidden}
 .code_input{font:bold 15px Consolas}
 
+.mb_s > span{
+    display: inline-block;
+    width: 150px;
+}
+/* 추가 CSS */
 /* 외부서비스 사이트코드 */
 .sitecode {display:inline-block;font:bold 15px 'Verdana';vertical-align:middle}
 .sitecode.title {width:80px}
@@ -325,15 +329,25 @@ border-bottom: 5px solid black;}
 .local_ov01 .ov_a{display:inline-block;line-height:30px;height:30px;font-size:0.92em;background:#ff4081;color:#fff;vertical-align:top;border-radius:5px;padding:0 7px}
 .local_ov01 .ov_a:hover{background:#ff1464}
 
+/* 상단 타이틀 */
+.mb_title{
+    display: flex;
+}
+.mb_title h1{
+    width: 49%;
+    line-height: 40px;
+    font-size: 1.25rem;
+    margin: 0 auto;
+}
 
 /* 테이블 */
-table {clear:both;width:100%;border-collapse:collapse;border-spacing:0;}
+table {clear:both;width:49%;border-collapse:collapse;border-spacing:0; margin: 0 auto;}
 table caption {height:0;font-size:0;line-height:0;overflow:hidden}
-table td{line-height: 28px;}
+table td{line-height: 22px;}
 tfoot th, tfoot td {border:1px solid #d6dce7;background:#eee;padding:5px;text-align:center;font-weight:bold;}
 tfoot th {}
 
-.tbl_wrap {margin:0 0 10px;padding:0}
+.tbl_wrap {margin:0 0 10px;padding:0; display: flex;}
 
 /* thead 한 줄 테이블 */
 .tbl_head01 {}
@@ -341,11 +355,9 @@ tfoot th {}
 .tbl_head01 thead th {background:#f5f8ff;color:#585857;border:1px solid #d6dce7;font-weight:600;text-align:center;padding:12px 5px;font-size:14px; letter-spacing: 1px;}
 .tbl_head01 thead th a{color:#585857;}
 .tbl_head01 thead input {vertical-align:top} /* middle 로 하면 게시판 읽기에서 목록 사용시 체크박스 라인 깨짐 */
-.tbl_head01 thead a {color:#383838;
-    /* text-decoration:underline */
-}
+/* .tbl_head01 thead a {color:#383838;text-decoration:underline} */
 .tbl_head01 tbody th{border:1px solid #d6dce7;padding:5px;text-align:center}
-.tbl_head01 tbody td{border:1px solid #d6dce7;padding:5px;text-align:center; font-size: 13px; color: #211e1a;}
+.tbl_head01 tbody td{border:1px solid #d6dce7;padding:6px;text-align:center; font-size: 13px; color: #211e1a;}
 .tbl_head01 tbody td a{
     color: #211e1a;
 }
